# gprconfig_kb

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  Makefile  Makefile.in  README  README.md  aclocal.m4  alire.toml  bootstrap.sh  config.guess  configure  configure.in  doinstall  features  features-11  features-12  features-13  features-14  features-15  features-16  features-17  features-20  features-21  features-22  features-23  glib-xml.adb  glib.ads  gnat.gpr  gnat.gpr.in  gprbuild.gpr  gprconfig-knowledge.adb  gprconfig-knowledge.ads  gprconfig-main.adb  gprconfig.ads  gprconfig.gpr  gprconfig.texi  install-sh  known-problems-100  (+22 more)
config/: foo.ads  test_shared.gpr
db/: 0_default.xml  aamp.xml  aamp_compilers.xml  aarch64-vx7.xml  aarch64-vx7r2.xml  arm-vx6.xml  arm-vx7.xml  arm-vx7r2.xml  asis.xml  asm.xml  baselined.xml  bin_img.xml  c.xml  clean.xml  compilers-aarch64-vx7r2-clang.xml  compilers-arm-vx7.xml  compilers-asis.xml  compilers-baselined.xml  compilers-e500v2-vx6.xml  compilers-e500v2-vx653.xml  compilers-e500v2-vx7.xml  compilers-e500v2-vx7r2.xml  compilers-ppc-vx653.xml  compilers-ppc-vx7.xml  compilers-ppc-vx7r2.xml  compilers-ppc64-vx7.xml  compilers-ppc64-vx7r2-clang.xml  compilers-ppc64-vx7r2.xml  compilers-vxworks.xml  compilers-x86-vx7.xml  compilers-x86_64-vx7.xml  compilers-x86_64-vx7r2-clang.xml  compilers.xml  cpp.xml  cross.xml  e500v2-vx6.xml  e500v2-vx653.xml  e500v2-vx7.xml  e500v2-vx7r2.xml  env.ent  (+31 more)
doc/: Makefile  Makefile.sphinx  gprbuild.css  gprbuild_gps.xml  gprbuild_ug.rst  gprbuild_ug.texi  gprconfig.texi  (+1 more)
(+372 files in other folders)
