AC_INIT(gprbuild,2.1,report@adacore.com,gprbuild)
AC_CANONICAL_SYSTEM
AC_PREFIX_PROGRAM(gnatmake)
AC_PROG_INSTALL
objdir=`pwd`
AC_SUBST(objdir)
case $target in
   *mingw*|*cygwin*) is_windows="true";;
                  *) is_windows="false";;
esac
AC_SUBST(is_windows)
AM_CHECK_XMLADA
AM_GNAT_BUILDS_SHARED
AC_OUTPUT(src/gprconfig-sdefault.ads Makefile)
